re PR debug/39372 (Missing DW_AT_location for constructor static variable)

PR debug/39372
	* dwarf2out.c (add_abstract_origin_attribute): Return
	origin_die.
	(gen_variable_die): Emit DW_AT_location on abstract static variable's
	DIE, don't emit it if abstract origin already has it.
	* tree-cfg.c (remove_useless_stmts_bind): GIMPLE_BINDs with any
	BLOCK_NONLOCALIZED_VARS in its gimple_bind_block aren't useless.

	* g++.dg/debug/dwarf2/static-local-var-in-ctor.C: New test.

From-SVN: r144682